--- a/src/app/admin/catalogs/catalogs.component.html
+++ b/src/app/admin/catalogs/catalogs.component.html
@@ -3,10 +3,10 @@
     הוסף קטלוג
   </button>
 </div>
-<div class="catalogs-list">
-  <ul class="catalog-list">
-    <ng-container *ngFor="let catalog of catalogs; let i = index">
+<div class="catalogs-container">
+  <ul class="catalog-list" *ngIf="catalogs$ | async as catalogs">
+    <li class="catalog-item" fxLayout="row" *ngFor="let catalog of catalogs; let i = index">
       <app-catalog [catalog]="catalog" (openEditCat)="openEditCatalogDialog(catalog)" (deleteCat)="deleteDialog(catalog.catalog_id)"></app-catalog>
-    </ng-container>
+    </li>
   </ul>
 </div>
