--- a/src/app/admin/catalogs/catalog/catalog.component.css
+++ b/src/app/admin/catalogs/catalog/catalog.component.css
@@ -1,14 +1,35 @@
+:host {
+  display: inherit;
+  gap: 1rem;
+  font-size: 16px;
+}
 .catalog-details {
   max-width: 300px;
+}
+
+h4 {
+  font-size: 18px;
 }
 
 .catalog-item {
   display: flex;
   text-align: right;
-  gap: .2rem
+  gap: 1rem;
+  font-size: 14px;
 }
 
 .catalog-text {
   display: flex;
   flex-direction: column;
+}
+
+.catalog-image img {
+  border-radius: 6px;
+  border: 2px solid grey;
+  height: 140px;
+  object-fit: cover;
+}
+
+.delete-btn {
+  font-size:12px;
 }
