--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,12 @@
 .navbar-nav {
   display: flex;
   align-items: center;
+  padding-inline-start: 0;
+  list-style-type: none;
+}
+
+.nav-item {
+  margin-inline-start: 1em;
 }
 
 .navbar-brand {
@@ -15,4 +21,16 @@
   height: 90px;
   background-size: 52px 90px , 70%;
   background-position: top right, left center;
+}
+
+.bg-dark {
+  background: #262626;
+  display: flex;
+  width: 100%;
+  padding: 6px;
+}
+
+a.nav-link {
+  color: #fff;
+  font-size: 20px;
 }
