--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="navbar-brand"></div>
-    <div class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="catalogs" class="nav-link">קטלוגים</a>
       </li>
-    </div>
+      <li class="nav-item">
+        <a routerLink="books" class="nav-link">ספרים</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="critique" class="nav-link">ביקורת תערוכות</a>
+      </li>
+    </ul>
   </nav>
 
   <router-outlet></router-outlet>
