--- a/src/app/components/catalogs-list/catalogs-list.component.css
+++ b/src/app/components/catalogs-list/catalogs-list.component.css
@@ -1,5 +1,5 @@
 .catalogs-list {
-  max-width: 60vw;
+  width: 96vw;
   padding: 24px 0;
   display: flex;
   justify-content: space-between;
@@ -9,12 +9,13 @@
 h3 {
   text-align: right;
   font-weight: bolder;
+  font-size: 24px;
 }
 
 .catalog-list {
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 32px;
   grid-template-rows: auto;
 }
@@ -26,10 +27,19 @@ h3 {
 .catalog-item {
   display: flex;
   text-align: right;
-  gap: .2rem
+  gap: 1rem;
+  font-size: 14px;
+}
+
+.catalog-image img {
+  border-radius: 6px;
+  border: 2px solid grey;
+  height: 140px;
+  object-fit: cover;
 }
 
 .catalog-text {
   display: flex;
   flex-direction: column;
+  font-size: 16px;
 }
