--- a/src/app/components/catalogs-list/catalogs-list.component.html
+++ b/src/app/components/catalogs-list/catalogs-list.component.html
@@ -1,26 +1,24 @@
-<div class="catalogs-list row">
-  <div>
-    <h3>קטלוגים</h3>
-    <ul class="catalog-list">
-      <li class="catalog-item" *ngFor="let catalog of catalogs; let i = index"
-                                  [class.active]="i == currentIndex"
-                                  (click)="setActiveCatalog(catalog, i)">
-        <div>
-          <mat-icon>
-            import_contacts
-          </mat-icon>
-        </div>
-        <div class="catalog-text">
-          <h4>{{ catalog.title }}</h4> <span>{{catalog.gallery}}</span>
-          שפה: {{catalog.language}}
-        </div>
-      </li>
-    </ul>
+<div class="catalogs-list" fxLayout="column">
+  <h3>קטלוגים</h3>
+  <div class="search">
+    <form class="example-form">
+      <input type="text"
+             matInput
+             name="search"
+             placeholder="Search catalogs"
+             [(ngModel)]="term">
+    </form>
   </div>
-<!--  <div *ngIf="currentCatalog" class="catalog-details">-->
-<!--      <app-catalog-details-->
-<!--        (refreshList)="refreshList()"-->
-<!--        [catalog]="currentCatalog"-->
-<!--      ></app-catalog-details>-->
-<!--  </div>-->
+  <ul class="catalog-list" *ngIf="catalogs$ | async as catalogs">
+    <li class="catalog-item" *ngFor="let catalog of catalogs | filter: term">
+      <div class="catalog-image">
+        <img *ngIf="catalog?.imgUrl" src="{{catalog?.imgUrl}}" alt="img" width="160">
+      </div>
+      <div class="catalog-text">
+        <h4>{{ catalog.title }}</h4> <span>{{catalog.gallery}} {{catalog?.year}}</span>
+        <p>{{catalog.artist}}</p>
+<!--        <span *ngIf="catalog.language">שפה: {{catalog.language}}</span>-->
+      </div>
+    </li>
+  </ul>
 </div>
