--- a/src/app/admin/critiques/critiques.component.html
+++ b/src/app/admin/critiques/critiques.component.html
@@ -1,1 +1,26 @@
-<p>critiques works!</p>
+<div class="critiques-container">
+  <h3>בקורת תערוכות</h3>
+  <div class="actions">
+    <button (click)="openAddEditCritiqueDialog({})" class="btn-add">
+      הוסף בקורת
+    </button>
+  </div>
+  <mat-list class="critiques-list" *ngIf="critiques$ | async as critiques">
+    <mat-list-item class="critique-item" *ngFor="let critique of critiques;">
+      <mat-icon mat-list-icon>article</mat-icon>
+      <div class="critique-text">
+        <h4>{{ critique?.title }}, <span>{{critique.paper}}</span>, <span *ngIf="critique?.date">{{critique.date}}</span></h4>
+        <p *ngIf="critique?.artist"><span>{{critique?.museum}}</span> {{critique.artist}}</p>
+        <a *ngIf="critique.article" href="{{critique.article}}" target="_blank">מאמר</a>
+        <div class="actions">
+          <button class="btn" mat-button>
+            <mat-icon>delete</mat-icon><span class="delete-btn"> מחיקה</span>
+          </button>
+          <button class="btn" mat-button (click)="openAddEditCritiqueDialog(critique)">
+            <mat-icon>edit</mat-icon><span class="edit-btn"> עריכה</span>
+          </button>
+        </div>
+      </div>
+    </mat-list-item>
+  </mat-list>
+</div>
