--- a/src/app/admin/dashboard/dashboard.component.css
+++ b/src/app/admin/dashboard/dashboard.component.css
@@ -9,10 +9,17 @@
   margin: 0 auto;
   display: flex;
   gap: 1em;
+  justify-content: space-evenly;
 }
 
 .btn {
-  background: #D0E3F0;
+  background: #64a4ce;
   color: #222;
   font-weight: bold;
+  padding: 8px 6px;
+  border-radius: 6px;
+  font-size: 18px;
+  min-width: 20ch;
+  text-align: center;
+  text-decoration: none;
 }
