--- a/src/app/components/catalogs-list/catalogs-list.component.css
+++ b/src/app/components/catalogs-list/catalogs-list.component.css
@@ -15,8 +15,8 @@ h3 {
 .catalog-list {
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 32px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
   grid-template-rows: auto;
 }
 
