--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,4 @@
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <div class="navbar-brand"></div>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a routerLink="catalogs" class="nav-link">קטלוגים</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="books" class="nav-link">ספרים</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="critique" class="nav-link">ביקורת תערוכות</a>
-      </li>
-    </ul>
-  </nav>
-
+  <app-navigation></app-navigation>
   <router-outlet></router-outlet>
-
 </div>
