--- a/src/app/admin/critiques/critiques.component.html
+++ b/src/app/admin/critiques/critiques.component.html
@@ -10,7 +10,9 @@
       <mat-icon mat-list-icon>article</mat-icon>
       <div class="critique-text">
         <h4>{{ critique?.title }}, <span>{{critique.paper}}</span>, <span *ngIf="critique?.date">{{critique.date}}</span></h4>
-        <p *ngIf="critique?.artist"><span>{{critique?.museum}}</span> {{critique.artist}}</p>
+        <p>
+          <span>{{critique?.museum}}</span><span *ngIf="critique?.artist">, {{critique.artist}}</span>
+        </p>
         <a *ngIf="critique.article" href="{{critique.article}}" target="_blank">מאמר</a>
         <div class="actions">
           <button class="btn" mat-button>
