--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 /*@import url(https://fonts.googleapis.com/earlyaccess/alefhebrew.css);*/
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+/*@font-face {*/
+/*  font-family: "Rubik Regular";*/
+/*  src: url("/assets/fonts/Rubik-Regular.ttf");*/
+/*  !*src: url("CustomFont.woff") format("woff"),*!*/
+/*  !*url("CustomFont.otf") format("opentype"),*!*/
+/*  !*url("CustomFont.svg#filename") format("svg");*!*/
+/*}*/
+/*@font-face {*/
+/*  font-family: "Rubik Bold";*/
+/*  src: url("/assets/fonts/Rubik-Bold.ttf");*/
+/*}*/
 * {
   direction: rtl;
   box-sizing: border-box;
 }
 
-html, body { height: 100%; font-family: 'Alef', sans-serif; font-size: 16px;}
+html, body { height: 100%; font-family: 'Frank Ruhl Libre', sans-serif; font-weight: bold; font-size: 16px;}
 
 body { margin: 0; overflow-x: hidden; }
 
 
 .material-icons{
-  font-family: 'Material Icons' !important;
+  font-family: 'Material Icons', sans-serif !important;
 }
 
 .list-group {
@@ -23,11 +34,14 @@ body { margin: 0; overflow-x: hidden; }
 .mat-typography div,
 .mat-typography h1, .mat-typography h2,
 .mat-typography h3, .mat-typography h4{
-  font-family: 'Alef', sans-serif;
+  font-family: 'Rubik', serif;
 }
 
-.mat-typography h4 {
+.mat-typography h4, .mat-typography h3,
+.mat-typography h2, .mat-typography h1{
   font-weight: 600;
+  color: #367CAB;
+  text-shadow: 2px 3px 4px #55555594;
 }
 
 .mat-list-base .mat-list-item .mat-list-item-content {
@@ -65,6 +79,38 @@ mat-date-range-picker.mat-datepicker-content {
 
 .mat-form-field .mat-form-field-flex {
   flex-wrap: wrap;
+}
+
+.mat-table {
+  background: #eff6fa59;
+}
+
+th.mat-header-cell {
+  text-align: right !important;
+  font-size: 24px;
+  padding-right: 12px !important;
+  padding-left: revert;
+  font-family: 'Rubik', serif;
+  font-weight: bolder;
+  color: #41471F;
+}
+
+td.mat-cell {
+  padding-right: 12px !important;
+  padding-left: revert;
+  font-size: 16px;
+  font-family: 'Frank Ruhl Libre', serif;
+}
+
+input.mat-input-element.search-input {
+  border-radius: 4px 4px 0 0;
+  background: #0000000a;
+  padding: 0.75em 0.75em 0 0.75em;
+  border: none;
+  border-bottom: 1px solid #000;
+  min-width: 350px;
+  height: 46px;
+  outline: none;
 }
 
 button {
