--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<h2 class="admin-title">ניהול</h2>
 <div class="container">
   <div class="admin-actions">
     <a routerLink="catalogs" class="btn mat-button">קטלוגים</a>
