--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<div class="bg-dark">
+<nav class="navbar navbar-expand navbar-dark">
   <div class="navbar-brand"></div>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
@@ -12,3 +13,4 @@
     </li>
   </ul>
 </nav>
+</div>
