--- a/src/app/admin/catalogs/catalog/catalog.component.css
+++ b/src/app/admin/catalogs/catalog/catalog.component.css
@@ -3,6 +3,7 @@
   gap: 1rem;
   font-size: 16px;
 }
+
 .catalog-details {
   max-width: 300px;
 }
@@ -30,6 +31,19 @@ h4 {
   object-fit: cover;
 }
 
+.actions {
+  display: flex;
+  gap: .5em;
+}
+
 .delete-btn {
   font-size:12px;
+  background: pink;
+  /*margin-top: 10px;*/
+  /*margin-bottom: 10px;*/
+}
+
+.edit-btn {
+  background: #d3daaa;
+  color: #343919;
 }
