--- a/src/app/admin/catalogs/catalog/catalog.component.html
+++ b/src/app/admin/catalogs/catalog/catalog.component.html
@@ -1,12 +1,15 @@
 <div class="catalog-image">
   <img *ngIf="catalog?.imgUrl" src="{{catalog?.imgUrl}}" alt="img" width="160">
 </div>
-<div class="catalog-text" (click)="onOpenEditCat({catalog})">
+<div class="catalog-text">
   <h4>{{ catalog?.title }}</h4> <span>{{catalog?.gallery}} {{catalog?.year}}</span>
   <p *ngIf="catalog?.language">שפה: {{catalog?.language}}</p>
   <div class="actions">
-    <button (click)="deleteCatalog(catalog?.catalog_id)" mat-icon-button>
+    <button (click)="deleteCatalog(catalog?.catalog_id)" class="delete-btn" mat-button>
       <mat-icon>delete</mat-icon><span class="delete-btn"> מחיקה</span>
+    </button>
+    <button class="edit-btn" mat-button (click)="onOpenEditCat(catalog)">
+      <mat-icon>edit</mat-icon><span class="edit-btn"> עריכה</span>
     </button>
   </div>
 </div>
