--- a/src/app/admin/catalogs/catalogs.component.html
+++ b/src/app/admin/catalogs/catalogs.component.html
@@ -1,3 +1,4 @@
+<h3 class="catalogs-title">קטלוגים</h3>
 <div class="actions">
   <button (click)="openAddDialog()" class="btn-add">
     הוסף קטלוג
