--- a/src/app/admin/critiques/critiques.component.html
+++ b/src/app/admin/critiques/critiques.component.html
@@ -1,28 +1,45 @@
 <div class="critiques-container">
-  <h3>בקורת תערוכות</h3>
+  <h3 class="critiques-title">בקורת תערוכות</h3>
   <div class="actions">
-    <button (click)="openAddEditCritiqueDialog({})" class="btn-add">
-      הוסף בקורת
-    </button>
+    <button (click)="openAddCritiqueDialog()" class="btn-add">הוסף בקורת</button>
   </div>
-  <mat-list class="critiques-list" *ngIf="critiques$ | async as critiques">
-    <mat-list-item class="critique-item" *ngFor="let critique of critiques;">
-      <mat-icon mat-list-icon>article</mat-icon>
-      <div class="critique-text">
-        <h4>{{ critique?.title }}, <span>{{critique.paper}}</span>, <span *ngIf="critique?.date">{{critique.date}}</span></h4>
-        <p>
-          <span>{{critique?.museum}}</span><span *ngIf="critique?.artist">, {{critique.artist}}</span>
-        </p>
-        <a *ngIf="critique.article" href="{{critique.article}}" target="_blank">מאמר</a>
-        <div class="actions">
-          <button class="btn" mat-button>
+  <ng-container *ngIf="critiques$ | async as critiques">
+    <table mat-table [dataSource]="critiques" class="critiques-table mat-elevation-z4">
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>כותרת</th>
+        <td mat-cell *matCellDef="let critique"> {{critique.title}} </td>
+      </ng-container>
+      <ng-container matColumnDef="museum">
+        <th mat-header-cell *matHeaderCellDef>מוזיאון/גלריה</th>
+        <td mat-cell *matCellDef="let critique"> {{critique.museum}} </td>
+      </ng-container>
+      <ng-container matColumnDef="artist">
+        <th mat-header-cell *matHeaderCellDef>אמן</th>
+        <td mat-cell *matCellDef="let critique"> {{critique.artist}} </td>
+      </ng-container>
+      <ng-container matColumnDef="article">
+        <th mat-header-cell *matHeaderCellDef>מאמר</th>
+        <td mat-cell *matCellDef="let critique">
+          <a *ngIf="critique.article" href="{{critique.article}}" target="_blank">הורדה</a>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>תאריך</th>
+        <td mat-cell *matCellDef="let critique"> {{critique.date}} </td>
+      </ng-container>
+      <ng-container matColumnDef="פעולות">
+        <th mat-header-cell *matHeaderCellDef>פעולות</th>
+        <td mat-cell *matCellDef="let critique" class="actions">
+          <button class="btn delete-btn" mat-button>
             <mat-icon>delete</mat-icon><span class="delete-btn"> מחיקה</span>
           </button>
-          <button class="btn" mat-button (click)="openAddEditCritiqueDialog(critique)">
+          <button class="btn edit-btn" mat-button (click)="openEditCritiqueDialog(critique)">
             <mat-icon>edit</mat-icon><span class="edit-btn"> עריכה</span>
           </button>
-        </div>
-      </div>
-    </mat-list-item>
-  </mat-list>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns | filter: term;"></tr>
+    </table>
+  </ng-container>
 </div>
