--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,8 @@
-
+.body-container {
+  width: 85vw;
+  margin: 0 auto;
+  padding-right: 6px;
+  border-right: 2px solid #1E475C;
+  min-height: calc(100vh - 102px);
+  height: max-content;
+}
