--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
-  <app-navigation></app-navigation>
+<app-navigation></app-navigation>
+<div class="body-container">
   <router-outlet></router-outlet>
 </div>
