--- a/src/app/books/books/books.component.css
+++ b/src/app/books/books/books.component.css
@@ -1,6 +1,8 @@
 .books-container {
-  width: 92vw;
-  margin: 24px auto;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1em;
+  height: calc(100vh - 100px);
 }
 
 .book-cover {
@@ -16,7 +18,6 @@
 }
 
 h3 {
-  text-align: center;
   font-weight: bolder;
   font-size: 26px;
 }
