--- a/src/app/components/catalogs-list/catalogs-list.component.css
+++ b/src/app/components/catalogs-list/catalogs-list.component.css
@@ -1,6 +1,6 @@
 .catalogs-list {
-  width: 96vw;
-  padding: 24px 0;
+  width: 100%;
+  padding: 1em;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
@@ -42,4 +42,30 @@ h3 {
   display: flex;
   flex-direction: column;
   font-size: 16px;
+}
+
+@media only screen and (max-width: 1300px) {
+  .catalog-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    grid-template-rows: auto;
+    margin-top: 2em;
+  }
+  li.catalog-item {
+    flex-direction: column;
+  }
+
+  .catalog-image {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .catalog-list {
+    padding-top: 2em;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    grid-template-rows: auto;
+  }
 }
