--- a/src/styles.css
+++ b/src/styles.css
@@ -31,17 +31,15 @@ body { margin: 0; overflow-x: hidden; }
 }
 
 .mat-typography,
-.mat-typography div,
-.mat-typography h1, .mat-typography h2,
-.mat-typography h3, .mat-typography h4{
-  font-family: 'Rubik', serif;
+.mat-typography>div{
+  font-family: 'Frank Ruhl Libre', sans-serif;
 }
 
 .mat-typography h4, .mat-typography h3,
 .mat-typography h2, .mat-typography h1{
   font-weight: 600;
+  font-size: 1.4em;
   color: #367CAB;
-  text-shadow: 2px 3px 4px #55555594;
 }
 
 .mat-list-base .mat-list-item .mat-list-item-content {
@@ -83,11 +81,12 @@ mat-date-range-picker.mat-datepicker-content {
 
 .mat-table {
   background: #eff6fa59;
+  width: 100%;
 }
 
-th.mat-header-cell {
+.mat-header-cell {
   text-align: right !important;
-  font-size: 24px;
+  font-size: 20px;
   padding-right: 12px !important;
   padding-left: revert;
   font-family: 'Rubik', serif;
@@ -95,11 +94,10 @@ th.mat-header-cell {
   color: #41471F;
 }
 
-td.mat-cell {
-  padding-right: 12px !important;
-  padding-left: revert;
+.mat-cell {
   font-size: 16px;
   font-family: 'Frank Ruhl Libre', serif;
+  padding: 6px 0;
 }
 
 input.mat-input-element.search-input {
@@ -111,6 +109,15 @@ input.mat-input-element.search-input {
   min-width: 350px;
   height: 46px;
   outline: none;
+  box-shadow: none !important;
+}
+
+mat-cell:first-of-type, mat-header-cell:first-of-type, mat-footer-cell:first-of-type {
+  padding: 0 12px 0 0!important;
+}
+
+.mat-input-element.search-input::placeholder {
+  font-size: 16px;
 }
 
 button {
@@ -120,4 +127,14 @@ button {
   border-radius: 12px;
   font-size: 16px;
   cursor: pointer;
+}
+
+@media(max-width: 600px) {
+  mat-row, mat-footer-row {
+    min-height: revert !important;
+  }
+
+  .row .mat-cell {
+    padding-right: 12px !important;
+  }
 }
