--- a/src/app/admin/books/add-edit-book/add-edit-book.component.html
+++ b/src/app/admin/books/add-edit-book/add-edit-book.component.html
@@ -28,19 +28,28 @@
     </mat-form-field>
     <mat-form-field>
       <mat-label>שנת הוצאה לאור</mat-label>
-      <input matInput formControlName="publication_year" class="form-control" name="publication_year" placeholder="הכנס gallery" />
+      <input matInput formControlName="publication_year" class="form-control" name="publication_year" placeholder="הכנס שנת הוצאה" />
       <mat-error *ngIf="editBookForm.controls['publication_year'].errors?.['require']">
         Required field
       </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>מאמר</mat-label>
+      <input matInput formControlName="publisher" class="form-control" name="article" placeholder="הכנס מאמר" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>קישור</mat-label>
+      <input matInput formControlName="link" class="form-control" name="link" placeholder="הכנס קישור" />
     </mat-form-field>
   </div>
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button type="submit" class="badge badge-success" (click)="updateBook()">
-    Update
+  <button type="button" class="btn">ביטול</button>
+  <button *ngIf="isEdit" type="submit" class="badge badge-success" (click)="updateBook()">
+    עדכון
   </button>
-  <button type="submit" class="badge badge-success" (click)="createBook()">
-    create
+  <button *ngIf="!isEdit" type="submit" class="badge badge-success" (click)="createBook(editBookForm?.value)">
+    יצירה
   </button>
 </mat-dialog-actions>
