--- a/src/app/books/books/books.component.html
+++ b/src/app/books/books/books.component.html
@@ -1,12 +1,23 @@
 <div class="books-container">
   <h3>ספרים</h3>
-  <ul class="book-list" *ngIf="books">
+  <div class="search">
+    <form class="example-form">
+      <mat-form-field>
+        <input type="text" class="search-input" [(ngModel)]="term"
+              matInput
+              name="search"
+              placeholder="Search catalogs">
+      </mat-form-field>
+    </form>
+  </div>
+  <ul class="books-list" *ngIf="books">
     <li class="book-item" fxLayout="row" *ngFor="let book of books;">
       <div class="book-cover">
         <img *ngIf="book?.cover" src="{{book?.cover}}" alt="img" width="160">
       </div>
       <div class="book-details">
         <h4>{{book.title}}</h4>
+        <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
         <p>{{book.publisher}}, {{book.publication_year}}</p>
       </div>
     </li>
