--- a/src/app/components/catalogs-list/catalogs-list.component.html
+++ b/src/app/components/catalogs-list/catalogs-list.component.html
@@ -2,11 +2,13 @@
   <h3>קטלוגים</h3>
   <div class="search">
     <form class="example-form">
-      <input type="text" class="search-input"
-             matInput
-             name="search"
-             placeholder="Search catalogs"
-             [(ngModel)]="term">
+      <mat-form-field>
+        <input type="text" class="search-input"
+              matInput
+              name="search"
+              placeholder="Search catalogs"
+              [(ngModel)]="term">
+      </mat-form-field>
     </form>
   </div>
   <ul class="catalog-list" *ngIf="catalogs$ | async as catalogs">
