--- a/src/app/components/critique/critique-list.component.css
+++ b/src/app/components/critique/critique-list.component.css
@@ -1,7 +1,7 @@
 h3 {
   text-align: right;
   font-weight: bolder;
-  font-size: 24px;
+  font-size: 32px;
 }
 .critiques-list {
   width: 100%;
@@ -26,13 +26,13 @@ input::placeholder {
 .critiques-table {
   display: flex;
   flex-direction: column;
-  max-height: 500px;
+  max-height: none;
   min-width: 300px;
 }
 
 .mat-table {
   overflow: auto;
-  max-height: 500px;
+  max-height: none;
 }
 
 .mobile-label {
