--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
   <div class="admin-actions">
     <a routerLink="catalogs" class="btn mat-button">קטלוגים</a>
     <a routerLink="books" class="btn mat-button">ספרים</a>
+    <a routerLink="articles" class="btn mat-button">מאמרים</a>
     <a routerLink="critiques" class="btn mat-button">ביקורת תערוכות</a>
   </div>
   <router-outlet></router-outlet>
