--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
         <input type="text" matInput class="formControl" placeholder="Username" #userName>
       </div>
       <div class="formGroup">
-        <label>User Password</label>
+        <label>Password</label>
         <input type="password" matInput class="formControl" placeholder="Password" #userPassword>
       </div>
       <!-- Calling SignIn Api from AuthService -->
@@ -26,10 +26,6 @@
           Log in with Google
         </button>
       </div>
-      <div class="forgotPassword">
-        <span routerLink="/forgot-password">Forgot Password?</span>
-      </div>
-<!--      <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>-->
     </div>
   </div>
 </div>
