--- a/src/app/admin/books/books.component.html
+++ b/src/app/admin/books/books.component.html
@@ -14,6 +14,7 @@
         <h3>{{book.title}}</h3>
         <p>{{book.publisher}}, {{book.publication_year}}</p>
         <a *ngIf="book?.article" target="_blank" href="{{book.article}}">בקורת על הספר</a>
+        <a *ngIf="book?.link" target="_blank" href="{{book.link}}">קישור לביקורת</a>
         <div class="actions">
           <button class="btn" (click)="deleteDialog(book.id)" mat-button>
             <mat-icon>delete</mat-icon><span class="delete-btn"> מחיקה</span>
