--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -11,6 +11,9 @@
     <li class="nav-item">
       <a routerLink="critique" [ngClass]="{'nav-link': true, 'active' : isActive('critique')}">ביקורת תערוכות</a>
     </li>
+    <li class="nav-item">
+      <a routerLink="articles" [ngClass]="{'nav-link': true, 'active' : isActive('articles')}">מאמרים</a>
+    </li>
   </ul>
 </nav>
 </div>
