--- a/src/app/components/critique/critique-list.component.html
+++ b/src/app/components/critique/critique-list.component.html
@@ -3,14 +3,15 @@
   <h3>בקורת תערוכות</h3>
   <div class="search">
       <mat-form-field>
-        <input type="text" #input class="search-input" name="search"
-               matInput (keyup)="doFilter(input.value)" placeholder="חפש">
+        <input type="text" #input class="search-input"
+               matInput (keyup)="applyFilter($event)" placeholder="חפש">
       </mat-form-field>
   </div>
-  <ng-container *ngIf="dataSource">
-    <mat-table #table [dataSource]="dataSource" class="critiques-table mat-elevation-z4" [class.isMobile]="isMobile">
+  <ng-container *ngIf="sortedData">
+    <mat-table #table [dataSource]="sortedData" [trackBy]="trackByUid" class="critiques-table mat-elevation-z4" matSort
+               [class.isMobile]="isMobile">
       <ng-container matColumnDef="title">
-        <mat-header-cell *matHeaderCellDef>כותרת</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>כותרת</mat-header-cell>
         <mat-cell *matCellDef="let critique">
           <span class="mobile-label">כותרת:</span>
           <span>{{critique.title}}</span>
@@ -35,15 +36,15 @@
           <a *ngIf="critique.article" href="{{critique.article}}">קישור להורדה</a> </mat-cell>
       </ng-container>
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef>תאריך</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך</mat-header-cell>
         <mat-cell *matCellDef="let critique">
           <span class="mobile-label">תאריך:</span>
-          <span>{{critique.date}}</span> </mat-cell>
+          <span>{{critique.date | date: 'dd/MM/yyyy'}}</span> </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
-
+    <mat-paginator [length]="200" [pageSizeOptions]="[10, 50, 100]" aria-label="Select page"></mat-paginator>
     <div *ngIf="listLength === 0" class="no-results">
       <h3>אין תוצאות</h3>
     </div>
